@@ -1,3 +1,9 @@
+2001-03-25  Alan Modra  <alan@linuxcare.com.au>
+
+	* config/tc-i386.c (i386_scale): Accept an absolute expression for
+	scale factor, and return the end of the expression.
+	(i386_operand): Modify for above.
+
 2001-03-23  Nick Clifton  <nickc@redhat.com>
 
 	* doc/as.texinfo: Document --listing-XXX command line switches.
